tests/machine/x/cobol/nested_function.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/nested_function.cob:8: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/nested_function.cob: in paragraph 'OUTER':
/workspace/mochi/tests/machine/x/cobol/nested_function.cob:13: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/nested_function.cob:14: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/nested_function.cob:15: error: 'INNER_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/nested_function.cob:14: error: 'INNER' is not defined

