tests/machine/x/cobol/nested_function.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. NESTED_FUNCTION.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 OUTER_RES PIC 9 VALUE 0.
       01 TMP PIC 9 VALUE 0.
       PROCEDURE DIVISION.
       PERFORM OUTER USING 3
       DISPLAY OUTER_RES
       STOP RUN.
       
       OUTER.
           PROCEDURE DIVISION USING X.
               PERFORM INNER USING 5
               COMPUTE OUTER_RES = INNER_RES
               EXIT.
